[gd_scene load_steps=9 format=3 uid="uid://dood5u4ayyadv"]

[ext_resource type="Script" path="res://Scripts/Weapons/PlayerProjectile.gd" id="1_hbb1q"]
[ext_resource type="Texture2D" uid="uid://dbfrvb45cmc6s" path="res://Resources/Sprites/Weapons/projectile.png" id="2_xymbc"]
[ext_resource type="Texture2D" uid="uid://vshaebicrthy" path="res://Resources/Sprites/Weapons/arcane_particles.png" id="3_0r4ui"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1yqnd"]
particles_animation = true
particles_anim_h_frames = 11
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_logt3"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 22.75
angular_velocity_min = -385.48
angular_velocity_max = 169.41
gravity = Vector3(0, 0, 0)
linear_accel_min = 49.68
linear_accel_max = 98.04
radial_accel_min = 32.68
radial_accel_max = 76.21
scale_min = 0.5
hue_variation_min = 1.0
hue_variation_max = 1.0
anim_speed_min = 0.42
anim_speed_max = 2.98
turbulence_enabled = true
turbulence_noise_speed_random = 1.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_r868m"]
particles_animation = true
particles_anim_h_frames = 11
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0cfo0"]
particle_flag_disable_z = true
angle_min = -131.8
angle_max = 293.0
angular_velocity_min = -169.41
angular_velocity_max = 186.46
radial_velocity_max = 39.21
gravity = Vector3(0, 0, 0)
linear_accel_max = 22.22
radial_accel_min = 20.91
radial_accel_max = 20.91
scale_min = 0.5
anim_speed_min = 2.0
anim_speed_max = 3.0
turbulence_enabled = true

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_frmga"]
radius = 2.99999
height = 34.0

[node name="Projectile" type="Node2D"]
script = ExtResource("1_hbb1q")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_xymbc")

[node name="Particles" type="GPUParticles2D" parent="Sprite"]
material = SubResource("CanvasItemMaterial_1yqnd")
amount = 48
process_material = SubResource("ParticleProcessMaterial_logt3")
texture = ExtResource("3_0r4ui")

[node name="DestroyEffect" type="GPUParticles2D" parent="Sprite"]
material = SubResource("CanvasItemMaterial_r868m")
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_0cfo0")
texture = ExtResource("3_0r4ui")
lifetime = 2.0
one_shot = true
explosiveness = 1.0

[node name="HitboxArea" type="Area2D" parent="Sprite" groups=["PlayerProjectileCollision"]]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/HitboxArea" groups=["PlayerProjectileCollision"]]
position = Vector2(-1, 4.37114e-08)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_frmga")
one_way_collision_margin = 0.0

[connection signal="body_entered" from="Sprite/HitboxArea" to="." method="_on_hitbox_area_body_entered"]
